# open-rdma

./: .gitignore  1777259892223.yml  LEARNING_ROADMAP.md
open-rdma-driver/: .gitignore  README.md  (+4 more)
open-rdma-driver/dtld-ibverbs/: Cargo.toml  README.md  rustfmt.toml
open-rdma-driver/dtld-ibverbs/rdma-core-55.0/: CMakeLists.txt  MAINTAINERS
open-rdma-driver/dtld-ibverbs/rdma-core-55.0/kernel-headers/: CMakeLists.txt
open-rdma-driver/dtld-ibverbs/rdma-core-55.0/kernel-headers/rdma/: bluerdma-abi.h  ib_user_ioctl_verbs.h
open-rdma-driver/dtld-ibverbs/rdma-core-55.0/libibverbs/: verbs.h
open-rdma-driver/dtld-ibverbs/rdma-core-55.0/providers/bluerdma/: CMakeLists.txt  bluerdma-abi.h  bluerdma.c  bluerdma.h
open-rdma-driver/dtld-ibverbs/src/: exports.rs  lib.rs  rxe.rs
open-rdma-driver/dtld-ibverbs/src/rxe/: ctx_ops.rs
open-rdma-driver/rust-driver/: CLAUDE.md  Cargo.toml
open-rdma-driver/rust-driver/benches/: descriptor.rs  virt_to_phy.rs
open-rdma-driver/rust-driver/examples/: test_csr_rw.rs
open-rdma-driver/rust-driver/src/: config.rs  constants.rs  error.rs  lib.rs  memory_proxy_simple.rs
open-rdma-driver/rust-driver/src/cmd/: configurator.rs  mod.rs  types.rs
open-rdma-driver/rust-driver/src/mem/: dmabuf.rs  mod.rs  pa_va_map.rs  utils.rs  virt_to_phy.rs
open-rdma-driver/rust-driver/src/mem/page/: emulated.rs  host.rs  host_old.rs  mod.rs
open-rdma-driver/rust-driver/src/mem/umem/: emulated.rs  host.rs  mod.rs
open-rdma-driver/rust-driver/src/net/: config.rs  mod.rs  reader.rs  recv_chan.rs  tap.rs
open-rdma-driver/rust-driver/src/net/simple_nic/: mod.rs  route.rs  tests.rs  worker.rs
open-rdma-driver/rust-driver/src/rdma_utils/: fragmenter.rs  mod.rs  mr_region_manager.rs  msn.rs  mtt.rs  pagemaps.rs  pd.rs  psn.rs  psn_tracker.rs  qp.rs  types.rs
open-rdma-driver/rust-driver/src/ring/: mod.rs  spec.rs  traits.rs
open-rdma-driver/rust-driver/src/ring/buffer/: consumer.rs  desc_ring.rs  mod.rs  producer.rs
open-rdma-driver/rust-driver/src/ring/csr/: constants.rs  mod.rs  mode.rs  ring_csr.rs
open-rdma-driver/rust-driver/src/ring/descriptors/: cmd.rs  meta_report.rs  mod.rs  send.rs  simple_nic.rs
open-rdma-driver/rust-driver/src/test_wrapper/: mod.rs  test_csr_rw.rs
open-rdma-driver/rust-driver/src/types/: addr.rs  mod.rs
open-rdma-driver/rust-driver/src/verbs/: core.rs  ctx.rs  dev.rs  ffi.rs  mock.rs  mod.rs
open-rdma-driver/rust-driver/src/workers/: ack_responder.rs  completion.rs  mod.rs  qp_timeout.rs  rdma.rs  retransmit.rs  spawner.rs
(+352 files in other folders)
