[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Driver"]
keywords = ["RDMA", "Driver"]
description = "Blue RDMA Driver"
license = "Apache-2.0"
repository = "todo"
name = "blue-rdma-driver"
version = "0.1.0"
edition = "2021"

[features]
default = ["page_size_2m", "hw"]
page_size_2m = []
page_size_4k = []
debug_csrs = []
hw = []
sim = []
mock = []

[dependencies]
bilge = "0.2.0"
bitvec = "1.0.1"
libc = "0.2.168"
memmap2 = "0.9.5"
parking_lot = "0.12.3"
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
tun = "0.7.10"
netlink-sys = "0.8.7"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.21.0"
ipnetwork = { version = "0.20.0", features = ["serde"] }
thiserror = "2.0.9"
ibverbs-sys = { git = "https://github.com/bsbds/rust-ibverbs.git", rev = "ea06bdc" }
crossbeam-deque = "0.8.6"
rtrb = "0.3.2"
rand = "0.8.5"
pnet = "0.35.0"
flume = "0.11.1"
toml = "0.8.20"
spin_sleep = "1.3.0"
oneshot = "0.1.10"
pci-driver = "0.1.4"
pci-info = "0.3.0"
nix = { version = "0.29.0", features = ["ioctl", "fs"] }
buddy_system_allocator = "0.11.0"
ctor = "0.4.1"
env_logger = "0.11.8"
log = "0.4.27"
bincode = "2.0.1"
bytemuck = { version = "1.23.0", features = ["derive"] }
crossbeam-queue = "0.3.12"
default-net = "0.22.0"
tokio = { version = "1.42.0", features = ["rt", "net", "io-util", "rt-multi-thread", "macros", "time"] }
hex = "0.4.3"
pagemap = "0.1.0"
socket2 = "0.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "virt_to_phy"
harness = false

[[bench]]
name = "descriptor"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(emulation)'] }
